<resources>
    <string name="app_name">Task App</string>
    <string name="First">First quarter</string>
    <string name="one">ONE</string>
    <string name="two">TWO</string>
    <string name="three">THRE</string>
    <string name="second">Second quarter</string>
    <string name="four">FOUR</string>
    <string name="five">FIVE</string>
    <string name="enter_phone">شماره تلفن را وارد نمایید</string>
    <string name="btn_call">تماس</string>
    <string name="save">save</string>
    <string name="drawer_menu">This is Drawer Menu</string>
    <string name="show_menu">Show Menu</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="phone_call">Phone Call</string>
</resources>
